# trust-calibration-system

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
agents/: calibrator.py  networks.py
api/: server.py
envs/: cascade_simulator.py  conflict_detector.py  explainer.py  grader.py  signal_generator.py  specialist_agents.py  trust_env.py
models/: schemas.py
results/checkpoints/: ppo_model.pth
results/logs/: evaluation_summary.json
server/: app.py
tests/: smoke_test.py
training/: baseline.py  evaluate.py  train.py
