[project]
name = "trust-calibration-openenv"
version = "1.0.0"
description = "RL environment for adaptive trust calibration under noisy and adversarial signals"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "pydantic==2.8.2",
  "numpy==1.26.4",
  "gymnasium==0.29.1",
  "matplotlib==3.9.2",
  "torch==2.2.2",
  "openai>=2.7.2",
  "requests==2.32.3",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
